syntax = "proto3";
package org.jetbrains.research.code.submissions.clustering;

option java_multiple_files = true;
option java_outer_classname = "CodeServerServiceProtos";

service CodeServer {
  rpc Unify(SubmissionCode) returns (SubmissionCode) {}
  rpc CalculateWeight(SubmissionsEdge) returns (SubmissionsWeight) {}
  rpc ClearUnifier(Empty) returns (Empty) {}
  rpc ClearDistMeasurer(Empty) returns (Empty) {}
}

message SubmissionCode {
  int32 stepId = 1;
  int32 id = 2;
  string code = 3;
}

message SubmissionsEdge {
  SubmissionCode from = 1;
  SubmissionCode to = 2;
}

message SubmissionsWeight {
  int32 weight = 1;
}

message Empty {}